# django-db-agent

./: LICENSE  README.md  pyproject.toml
config/: settings.py
django_db_agent/: apps.py
django_db_agent/core/: approval.py  diff.py  extractor.py  interfaces.py  pipeline.py  validator.py
django_db_agent/ingestion/: pdf.py  text.py
django_db_agent/llm/: prompts.py
